tests/ui/rfcs/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0277]: the trait bound `NonConstImpl: ~const ConstDefaultFn` is not satisfied
  --> $DIR/const-default-method-bodies.rs:26:18
   |
LL |     NonConstImpl.a();
   |                  ^ the trait `ConstDefaultFn` is not implemented for `NonConstImpl`
   |
note: required by a bound in `ConstDefaultFn::a`
  --> $DIR/const-default-method-bodies.rs:5:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `ConstDefaultFn::a`
...
LL |     fn a(self) {
   |        - required by a bound in this associated function
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | const fn test() where NonConstImpl: ConstDefaultFn {
   |                 ++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
